syntax = "proto3";

package pb;

import "clientinfo.proto";
import "roominfo.proto";
import "roomoption.proto";

service Game {
	rpc Create (CreateRoomReq) returns (JoinedRoomRes);
	rpc Join (JoinRoomReq) returns (JoinedRoomRes);
}

message CreateRoomReq {
	string app_id = 1;
	RoomOption room_option = 2;
	ClientInfo master_info = 3;
}

message JoinRoomReq {
	string app_id = 1;
	string room_id = 2;
	ClientInfo client_info = 3;
}

message JoinedRoomRes {
	RoomInfo room_info = 1;
	repeated ClientInfo players = 2;
	string url = 3;
}
